[project]
name = "vit-arc-slot"
version = "0.0.1"
description = "ViT ARC w/ Slot Attention"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'attention mechanism',
    'abstract visual "reasoning"'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "slot-attention",
    "torch>=2.5",
    "einops>=0.8.0"
]

[project.urls]
Homepage = "https://pypi.org/project/vit-arc-slot/"
Repository = "https://github.com/lucidrains/vit-arc-slot"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["vit_arc_slot"]
